--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-Flask==2.3.2
-scikit-learn==1.5.1
-pandas==2.1.4
-numpy==1.26.4
-vosk==0.3.45
-pyaudio==0.2.14
-webrtcvad==2.0.10
-gunicorn==22.0.0
-google-generativeai==0.7.2
-plotly==5.22.0
-flask-socketio
-eventlet
+Flask>=2.0
+Flask-SocketIO>=5.0
+eventlet>=0.33
+pyaudio>=0.2.11
+pandas>=1.1
+plotly>=5.0
+vosk>=0.3.45
+webrtcvad>=2.0.10
+google-generativeai>=0.2.2
